@@ -73,7 +73,7 @@ str CMDscience_bat_##TYPE##_##FUNC(bat *ret, const bat *bid)		\
 	bn->trevsorted = 0;												\
 	bn->T->nil = b->T->nil;											\
 	bn->T->nonil = b->T->nonil;										\
-	BATkey(BATmirror(bn), 0);										\
+	BATkey(bn, 0);													\
 	if (!(bn->batDirty&2))											\
 		BATsetaccess(bn, BAT_READ);									\
 	BBPkeepref(*ret = bn->batCacheid);								\
@@ -118,7 +118,7 @@ str CMDscience_bat_cst_##FUNC##_##TYPE(bat *ret, const bat *bid,		\
 	bn->trevsorted = 0;													\
 	bn->T->nil = b->T->nil;												\
 	bn->T->nonil = b->T->nonil;											\
-	BATkey(BATmirror(bn),0);											\
+	BATkey(bn,0);														\
 	if (!(bn->batDirty&2))												\
 		BATsetaccess(bn, BAT_READ);										\
 	BBPkeepref(*ret = bn->batCacheid);									\
@@ -162,7 +162,7 @@ str CMDscience_cst_bat_##FUNC##_##TYPE(bat *ret, const TYPE *d,			\
 	bn->trevsorted = 0;													\
 	bn->T->nil = b->T->nil;												\
 	bn->T->nonil = b->T->nonil;											\
-	BATkey(BATmirror(bn),0);											\
+	BATkey(bn,0);														\
 	if (!(bn->batDirty&2))												\
 		BATsetaccess(bn, BAT_READ);										\
 	BBPkeepref(*ret = bn->batCacheid);									\
