@@ -721,7 +721,7 @@ delta_delete_bat( sql_dbat *bat, BAT *i )
 	}
 	assert(b->T->heap.storage != STORE_PRIV);
 	BATappend(b, i, TRUE);
-	BATkey(BATmirror(b), TRUE);
+	BATkey(b, TRUE);
 	bat_destroy(b);
 
 	bat->cnt += BATcount(i);
@@ -743,7 +743,7 @@ delta_delete_val( sql_dbat *bat, oid rid )
 	}
 	assert(b->T->heap.storage != STORE_PRIV);
 	BUNappend(b, (ptr)&rid, TRUE);
-	BATkey(BATmirror(b), TRUE);
+	BATkey(b, TRUE);
 	bat_destroy(b);
 
 	bat->cnt ++;
@@ -1903,7 +1903,7 @@ tr_update_delta( sql_trans *tr, sql_delta *obat, sql_delta *cbat, int unique)
 			BAT *newcur = ins;
 
 			if (unique)
-				BATkey(BATmirror(newcur), TRUE);
+				BATkey(newcur, TRUE);
 			temp_destroy(cbat->bid);
 			temp_destroy(obat->bid);
 			obat->bid = cbat->ibid;
@@ -1989,7 +1989,7 @@ tr_merge_delta( sql_trans *tr, sql_delta *obat, int unique)
 			bat id = obat->bid;
 
 			if (unique)
-				BATkey(BATmirror(newcur), TRUE);
+				BATkey(newcur, TRUE);
 			obat->bid = obat->ibid;
 			obat->ibid = id;
 
